<resources>
    <string name="app_name">Memory-Madness</string>
    <string name="welcome_to_memory_madness">Welcome to \n Memory Madness</string>
    <string name="choose_difficulty">Choose Difficulty</string>
    <string name="back">⏎ Back</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="startgame">StartGame</string>
    <string name="difficulty">Difficulty</string>
    <string name="name">Name</string>
    <string name="congratulations">Congratulations!!🥳</string>
    <string name="you_beat_the_game">You beat the game !</string>
    <string name="stats">Stats :</string>
    <string name="home_menu">⏎ Home menu</string>
    <string name="time">Time \n%1$d : %2$d</string>
    <string name="moves">Moves \n%1$d</string>
    <string name="play_again">Play Again</string>
    <string name="halloween">🎃HALLOWEEN🎃</string>
    <string name="christmas">🎄CHRISTMAS🎄</string>
    <string name="easter">🐣EASTER🐣</string>
    <string name="st_patrick_s_day">☘️ST,PATRICK\'S DAY☘️</string>
    <string name="difficulty_highscore">Difficulty\n%1$s</string>
    <string name="pause_help_highscore">Pause help\n%1$s</string>
    <string name="time_left_highscore">Time Left\n%1$d : %2$d</string>
    <string name="moves_highscore">Moves\n%1$d</string>
    <string name="score">Score</string>
    <string name="enable_pause">Enable\nPause</string>
    <string name="theme">Theme</string>
    <string name="you_lose">You Lose !</string>
    <string name="pause">Pause</string>
    <string name="highscore">HighScore 📜</string>
    <string name="memory_madness_n_menu">Memory Madness \n Menu</string>
    <string name="save">Save</string>
    <string name="close_game">Close Game</string>
    <string name="save_score">Save Score</string>
    <string name="difficulty_home_menu">Difficulty\n %1$s</string>
    <string name="field_cannot_be_empty">Field Cannot be empty</string>
    <string name="score_saved">Score saved</string>
    <string name="cancel">Cancel</string>
    <string name="would_you_like_to_close_the_game">%1$s\nwould you like to close the game ?</string>
    <string name="new_player_name_saved">New player name : %1$s saved</string>
</resources>