<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backround_greyis"
    tools:context=".Fragments.HomeMenuFragment">


   

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        app:cardElevation="0dp"
        android:background="@color/backround_greyis"
        android:backgroundTint="@color/backround_greyis"
        app:cardUseCompatPadding="false"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="3:4"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_home_head_af"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:textSize="32sp"
                android:fontFamily="@font/kranky"
                android:text="@string/welcome_to_memory_madness"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_input_name_af"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_head_af" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start_af"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginTop="32dp"
                android:textSize="18sp"
                android:backgroundTint="@color/primary_red"
                app:cornerRadius="4dp"
                android:shadowColor="@color/primary_red"
                android:text="@string/startgame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_input_name_af" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_difficulty_af"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColor="@color/primary_red"
                android:textSize="18sp"
                android:backgroundTint="@color/backround_greyis"
                app:strokeColor="@color/primary_red"
                app:strokeWidth="2dp"
                app:cornerRadius="4dp"
                android:shadowColor="@color/primary_red"
                android:text="@string/difficulty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_start_af" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>