<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backround_greyis"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.WinFragment">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:cardElevation="0dp"
        android:background="@color/backround_greyis"
        android:backgroundTint="@color/backround_greyis"
        app:cardUseCompatPadding="false"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="3:4"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_win_head1_fw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:fontFamily="@font/kranky"
                android:text="@string/congratulations"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <TextView
                android:id="@+id/tv_stats_fw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/kranky"
                android:text="@string/stats"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_win_head1_fw" />

            <TextView
                android:id="@+id/tv_time_fw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/kranky"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_stats_fw" />

            <TextView
                android:id="@+id/tv_moves_fw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kranky"
                android:text="@string/moves"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_time_fw" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_score_fw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/primary_red"
                android:shadowColor="@color/primary_red"
                android:text="Save Score"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_moves_fw" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_play_again_fw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/primary_red"
                android:shadowColor="@color/primary_red"
                android:text="@string/play_again"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="4dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_high_score_fw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_high_score_fw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/backround_greyis"
                android:shadowColor="@color/primary_red"
                android:text="High Score"
                android:textColor="@color/primary_red"
                android:textSize="18sp"
                app:cornerRadius="4dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_home_fw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/primary_red"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_home_fw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/backround_greyis"
                android:shadowColor="@color/primary_red"
                android:text="@string/home_menu"
                android:textColor="@color/primary_red"
                android:textSize="18sp"
                app:cornerRadius="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/primary_red"
                app:strokeWidth="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>